# lastfm_wallpaper

./: .pre-commit-config.yaml  LICENSE  README.md  lastfm_wallpaper.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
