[tool.poetry]
name = "lastfm_wallpaper"
version = "0.1.0"
description = "Creates wallpapers with covers from personal top chart on Last.fm"
license = "MIT"
authors = ["Lukas Holecek <hluk@email.cz>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.2.6"
Pillow = "^11.2.1"
pylast = "^5.5.0"
requests = "^2.32.4"
aiohttp = {extras = ["speedups"], version = "^3.12.6"}

[tool.poetry.scripts]
lastfm_wallpaper = "lastfm_wallpaper:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
