[tool.poetry]
name = "lastfm_wallpaper"
version = "0.1.0"
description = "Creates wallpapers with covers from personal top chart on Last.fm"
license = "MIT"
authors = ["Lukas Holecek <hluk@email.cz>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.2.6"
Pillow = "^11.3.0"
pylast = "^6.0.0"
requests = "^2.32.5"
aiohttp = {extras = ["speedups"], version = "^3.12.15"}

[tool.poetry.scripts]
lastfm_wallpaper = "lastfm_wallpaper:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
