[project]
name = "lastfm_wallpaper"
version = "0.1.0"
description = "Creates wallpapers with covers from personal top chart on Last.fm"
license = "MIT"
authors = [{ name = "Lukas Holecek", email = "hluk@email.cz" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=2.2.6,<3",
    "Pillow>=12.1.1,<13",
    "pylast>=7.0.2,<8",
    "requests>=2.33.0,<3",
    "aiohttp[speedups]>=3.13.3,<4",
]

[project.scripts]
lastfm_wallpaper = "lastfm_wallpaper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
